--- a/_posts/2020-08-23-Profinet.md
+++ b/_posts/2020-08-23-Profinet.md
@@ -6,4 +6,4 @@ categories: [Certificate]
 ---
 
 
-![PROFINET](../Certs/In_DB_lc.robots.LCPDFCertificateGenerationProductRobot_QA584KD-1.png "PROFINET")
+![PROFINET](./Certs/In_DB_lc.robots.LCPDFCertificateGenerationProductRobot_QA584KD-1.png "PROFINET")
